--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -519,6 +519,7 @@ background-color: #F55923;
 
 /*Alert*/
 
+
 #sidebar-left .alert {
   float: right;
   margin: 0;
@@ -529,7 +530,15 @@ background-color: #F55923;
   display: none;
   font-size: 10px;
   text-transform: uppercase;
-  color: green;
+  background: #98E22D;
+  color: #fff;
+  width: 100%;
+  position: absolute;
+  z-index: 2000;
+  text-align: center;
+  opacity: 0.7;
+  border-radius: 0!important;
+  padding: 5px;
 }
 
 #sidebar-left  .alertSuccess {
