--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -1,4 +1,13 @@
-<h2 class="page-header">Listing sandboxes</h2>
+<div class="row">
+	<div class="col-md-12">
+		<h2 class="page-header">Listing sandboxes</h2>
+		<div class="addNew">
+		<%= link_to new_sandbox_path, class: 'btn btn-success' do %>
+  		<i class="fa fa-plus-square-o"></i> New Sandbox
+		<% end %>
+	</div>
+	</div>
+</div>
 
 <table class="table table-striped">
   <thead>
@@ -43,7 +52,3 @@
 </table>
 
 <br>
-
-<%= link_to new_sandbox_path, class: 'btn btn-default' do %>
-  <i class="fa fa-plus-square-o"></i> New Sandbox
-<% end %>
