--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,31 @@
   <body>
     <header>
       <nav class="navbar navbar-inverse navbar-fixed-top">
-      <a class="company-logo" href="/">Vizard</a><span class="tagline">beta</span>
+        <a class="company-logo" href="/">Vizard</a><span class="tagline">beta</span>
+        <% if( user_signed_in? ) %>
+        <ul class="nav navbar-right top-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Bienvenido, <%= current_user.email %> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li>
+              <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+              </li>
+              <li>
+              <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+              </li>
+              <li>
+              <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+              </li>
+              <li class="divider"></li>
+              <li>
+              <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <% end %>
         <div class="container">
             <div class="clearfix toolbarName">
-              <% if( user_signed_in? ) %>
-              <%= current_user.email %>
-              <% end %>
             </div>
         </div>
 
