--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               </li>
               <li class="divider"></li>
               <li>
-              <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
               </li>
             </ul>
           </li>
