--- a/app/views/sandboxes/_form.html.erb
+++ b/app/views/sandboxes/_form.html.erb
@@ -1,10 +1,20 @@
 <%= simple_form_for(@sandbox) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-group">
     <%= f.input :name, placeholder: 'Enter a sandbox name', input_html: { class: 'form-control' } %>
     <%= f.input :description, placeholder: 'Enter a description', input_html: { class: 'form-control' } %>
-    <%= f.input :graph_data, placeholder: 'Enter your JSON data', input_html: { class: 'form-control' } %>
+    <%= f.input :graph_data, placeholder: 'Enter your JSON data', input_html: { class: 'form-control' } %>    
+	  <div class="checkbox">
+	    <label>
+	    	<% checked = '' %>
+	    	<% if @sandbox.public %>
+	    		<% checked = ' checked="checked"' %>
+			<% end %>
+	    	<input name="sandbox[public]" value="false" type="hidden">
+	      <input class="boolean optional checkbox" id="sandbox_public" name="sandbox[public]" value="1" type="checkbox" <%= checked %>> Public sandbox?
+	    </label>
+	  </div>
   </div>
 
   <div class="form-actions">
