--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -1,4 +1,8 @@
-<h2 class="page-header">Listing sandboxes</h2>
+<h3 class="page-header">Private sandboxes</h3>
+
+<%= link_to new_sandbox_path, class: 'btn btn-default' do %>
+  <i class="fa fa-plus-square-o"></i> New Sandbox
+<% end %>
 
 <table class="table table-striped">
   <thead>
@@ -7,7 +11,7 @@
       <th>Name</th>
       <th>Description</th>
       <th>Last update</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -23,6 +27,11 @@
         </td>
         <td><%= sandbox.description %></td>
         <td><%= sandbox.updated_at %></td>
+        <td>
+          <% if(sandbox.public?) %>
+            <i class="fa fa-globe" title="Public"></i>
+          <% end %>
+        </td>
         <td>
           <%= link_to sandbox do %>
             <i class="fa fa-eye" title="Show"></i>
@@ -40,12 +49,52 @@
         </td>
       </tr>
     <% end %>
+    <% else %>
+      <tr>
+        <td colspan="8">
+          <p class="text-center">no records</p>
+        </td>
+      </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to new_sandbox_path, class: 'btn btn-default' do %>
-  <i class="fa fa-plus-square-o"></i> New Sandbox
-<% end %>
+<h3 class="page-header">Public sandboxes</h3>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>id</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Last update</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% if( ! @public_sandboxes.blank? ) %>
+    <% @public_sandboxes.each do |sandbox| %>
+      <tr>
+        <td><%= sandbox.id %></td>
+        <td>
+          <%= link_to sandbox do %>
+            <%= sandbox.name %>
+          <% end %>
+        </td>
+        <td><%= sandbox.description %></td>
+        <td><%= sandbox.updated_at %></td>
+      </tr>
+    <% end %>
+    <% else %>
+      <tr>
+        <td colspan="8">
+          <p class="text-center">no records</p>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
