--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -7,15 +7,14 @@
 				<div class="pull-left left">
 					 <div id="stencil-container"></div>
 				</div>
-				<div id="paper-container"></div>
-				<div class="pull-right right">
-			            <div id="inspector-container" class="clearfix">
-				              <div class="about">
-				                <h1>Vizard</h1>
-				                <h2>Process Mapping</h2>
-				              </div>
-			            </div>
+				<div id="paper-container">
 				</div>
+			    <div id="inspector-container" class="clearfix">
+					<div class="about">
+						<h1>Vizard</h1>
+						<h2>Process Mapping</h2>
+				    </div>
+			    </div>
    		</div>
         <script type="text/javascript" src="//apis.google.com/js/client.js"></script>
         <script id="graph_data" type="text/json">
