--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top clearfix">
 	<a class="company-logo" href="/">Vizard</a><span class="tagline">beta</span>
 	 <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
