--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <nav class="navbar navbar-inverse navbar-fixed-top clearfix">
       <a class="company-logo" href="/">Vizard</a><span class="tagline">beta</span>
         <div class="container">
             <div class="clearfix toolbarName"></div>
@@ -20,7 +20,7 @@
     </nav>
 
     </header>
-    <div role="main" class="container">
+    <div role="main" class="container FullPage">
       <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
