restrict interaction with public sandboxes

--- a/app/views/layouts/sandboxes.html.erb
+++ b/app/views/layouts/sandboxes.html.erb
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <%= stylesheet_link_tag 'style', media: 'all', 'data-turbolinks-track' => true %>
+    <script>
+        <%= 'var interactive_status = ' + @owner.to_s %>
+    </script>
   </head>
   <body>
     <header>
