--- a/app/views/layouts/_sandbox_navigation.html.erb
+++ b/app/views/layouts/_sandbox_navigation.html.erb
@@ -1,6 +1,8 @@
 <% content_for :navbar do %>
     <span id="fileName"><%= truncate(@sandbox.name, length: 40, omission: "...") %></span>
-    <span id="fileEdit"><%= link_to('<i class="fa fa-pencil"></i>'.html_safe, [:edit, @sandbox]) %></span>
+	<% if(@owner) %>
+    	<span id="fileEdit"><%= link_to('<i class="fa fa-pencil"></i>'.html_safe, [:edit, @sandbox]) %></span>
+    <% end %>
 <% end %>
 
 <%= render 'layouts/navigation' %>
