--- a/app/views/sandboxes/edit.html.erb
+++ b/app/views/sandboxes/edit.html.erb
@@ -1,4 +1,4 @@
-<h2 class="page-header">Editing sandbox <small><%= @sandbox.name %></small></h2>
+<h2>Editing sandbox <small><%= @sandbox.name %></small></h2>
 
 <%= render 'form' %>
 
