only the owner can save his work
also
- add link to sandboxes
- add link to sign out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
               <li>
               <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
               </li> -->
+              <li>
+                <a href="/sandboxes"><i class="fa fa-fw fa-inbox"></i> Sandboxes</a>
+              </li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
