--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -43,12 +43,9 @@ span.tagline{
   height: 100%;
 }
 #paper-container {
-	padding: 0;
-	margin: 0;
-	top: 0;
-	bottom: 0;
+	width: 100%;
 	height: 100%;
-	right: 0!important;
+	padding: 50px 0 0 0;
 }
 
 .FullPage{
@@ -278,9 +275,17 @@ span.tagline{
 /*header*/
 
 .navbar-inverse{
-	position: fixed;
 	margin: 0;
+	position: relative;
 
+
+}
+
+/*Sidebar*/
+
+.full{
+	width: 100%;
+	float: left;
 }
 
 /*Sidebar*/
@@ -401,7 +406,6 @@ color: #F2F2F2;
 
 .inspector{
 	height: 100%;
-	bottom: 0;
 	text-transform: none;
 	padding: 60px 0 0 0;
 }
@@ -413,10 +417,10 @@ color: #F2F2F2;
 
 #inspector-container {
   background: #fff;
-  top: 0;
-  bottom: 0;
   height: 100%;
   border-left: 1px solid #cecece;
+  z-index: 100;
+  float: right;
 }
 
 .clearfix.toolbarName {
@@ -575,7 +579,6 @@ background-color: #F55923;
    z-index: 100;
    pointer-events: none;
    padding: 10px;
-   border-radius: 5px;
 }
 
 .joint-tooltip.small {
