--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -3,11 +3,9 @@
 <%= @sandbox.name %>
 <% end %>
 <span class="alert"></span>
-   		<div class="full clearfix">
+   			<div id="paper-container" class="clearfix">
 				<div class="pull-left left">
 					 <div id="stencil-container"></div>
-				</div>
-				<div id="paper-container">
 				</div>
 			    <div id="inspector-container" class="clearfix">
 					<div class="about">
@@ -15,7 +13,7 @@
 						<h2>Process Mapping</h2>
 				    </div>
 			    </div>
-   		</div>
+			</div>
         <script type="text/javascript" src="//apis.google.com/js/client.js"></script>
         <script id="graph_data" type="text/json">
           <%= @sandbox.graph_data.html_safe %>
