--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,7 +1,21 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 
+<span class="alert"></span>
+<div id="paper-container" class="clearfix">
+	<div class="pull-left left" style="min-width:1px !important">
+		 <div id="stencil-container"></div>
+	</div>
+	<div id="inspector-container" class="clearfix">
+		<div class="about">
+			<h1>Vizard</h1>
+			<h2>Process Mapping</h2>
+		</div>
+	</div>
+</div>
+
+<script id="graph_data" type="text/json">
+	
+</script>
 
 <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.17.1.css">
-<script src="//code.jquery.com/qunit/qunit-1.17.1.js"></script>
-<script src="/assets/tests.js"></script>
