Initial tutorial, closes #185

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -294,7 +294,7 @@ span.tagline{
 
 /*Sidebar*/
 
-.right{
+.sidebar-right{
 	width: auto;
 	height: 100%;
 	background: #fff;
@@ -302,7 +302,7 @@ span.tagline{
 	padding: 0;
 }
 
-.left{
+.sidebar-left{
 	min-width: 75px;
 	height: 100%;
 	background: #fff;
