--- a/app/views/layouts/sandboxes.html.erb
+++ b/app/views/layouts/sandboxes.html.erb
@@ -5,14 +5,13 @@
     <title><%= content_for?(:title) ? yield(:title) + " - " : "" %>Vizard</title>
     <!-- <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Vizard Rails" %>"> -->
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'joint.all', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'bpmn', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'sandboxes', 'data-turbolinks-track' => true %>
+
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <%= stylesheet_link_tag 'style', media: 'all', 'data-turbolinks-track' => true %>
     <script>
         <%= 'var interactive_status = ' + @owner.to_s %>
     </script>
