--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 <span class="alert"></span>
    			<div id="paper-container" class="clearfix">
-				<div class="pull-left left">
+				<div class="pull-left sidebar-left">
 					 <div id="stencil-container"></div>
 				</div>
 			    <div id="inspector-container" class="clearfix">
