--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,6 @@
 <%# add navigation links to this file %>
 <div class="nav">
-	<div id="toolbar-container">
+	<div id="toolbar-container" data-step="1" data-intro="This is the toolbar">
         <% if(@owner) %>
             <button class="btn-drive-save" onclick="toolbar.saveGraph()" data-tooltip="Save"><i class="fa fa-floppy-o fa-lg"></i></button>
         <% end %>
@@ -13,5 +13,6 @@
             <button class="btn-redo" onclick="commandManager.redo()" data-tooltip="Redo"><i class="fa fa-repeat fa-lg"></i></button>
             <button class="btn-clear" onclick="graph.clear()" data-tooltip="Clear"><i class="fa fa-trash fa-lg"></i></button>
         <% end %>
+        <a class="btn btn-large btn-success" href="javascript:void(0);" onclick="javascript:introJs().start();">Intro</a>
     </div>
 </div>
