fix display dropdown user menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-inverse navbar-fixed-top clearfix">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
         <a class="company-logo" href="/">Vizard</a><span class="tagline">beta</span>
         <% if( user_signed_in? ) %>
         <ul class="nav navbar-right top-nav">
