--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,16 @@
         </div>
       </nav>
     </header>
+<!-- acÃ¡ agregar el div con la imagen -->
+    <div class="row">
+      <div class="container">
+        <div class="col-md-6 mtb40">
+          <h2>What is Sandbox?</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+        </div>
+      </div>
+    </div>
+<!-- fin -->
     <div role="main" class="container FullPage">
       <%= render 'layouts/messages' %>
       <%= yield %>
