--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -836,3 +836,8 @@ height: 300px;
   font-size: 16px;
   line-height: 1.5;
 }
+.footer{
+  background-color: #2c3e50;
+  color: #FFFFFF;
+  font-weight: normal;
+}
