--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,69 +1,69 @@
 <div class="row mb40">
 	<div class="col-md-12">
-		<h3>Explore the Features</h3>
+		<h2 class="text-center">Explore the Features</h2>
 	</div>
 </div>
 <div class="row mb20">
 	<div class="col-md-4">
-		<p class="text-center"><img src="http://placehold.it/100x100"></p>
+		<p class="text-center"><%= image_tag "1.png" %></p>
 		<div class="row">
 			<div class="col-md-12">
-				<h4>Phasellus convallis ipsum non purus</h4>
-				<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+				<h3>Phasellus convallis ipsum non</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-4">
-		<p class="text-center"><img src="http://placehold.it/100x100"></p>
+		<p class="text-center"><%= image_tag "2.png" %></p>
 		<div class="row">
 			<div class="col-md-12">
-				<h4>Phasellus convallis ipsum non purus</h4>
-				<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+				<h3>Phasellus convallis ipsum non</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-4">
-		<p class="text-center"><img src="http://placehold.it/100x100"></p>
+		<p class="text-center"><%= image_tag "3.png" %></p>
 		<div class="row">
 			<div class="col-md-12">
-				<h4>Phasellus convallis ipsum non purus</h4>
-				<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+				<h3>Phasellus convallis ipsum non</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 			</div>
 		</div>
 	</div>
 </div>
 <div class="row mb20">
 	<div class="col-md-4">
-		<p class="text-center"><img src="http://placehold.it/100x100"></p>
+		<p class="text-center"><%= image_tag "4.png" %></p>
 		<div class="row">
 			<div class="col-md-12">
-				<h4>Phasellus convallis ipsum non purus</h4>
-				<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+				<h3>Phasellus convallis ipsum non</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-4">
-		<p class="text-center"><img src="http://placehold.it/100x100"></p>
+		<p class="text-center"><%= image_tag "5.png" %></p>
 		<div class="row">
 			<div class="col-md-12">
-				<h4>Phasellus convallis ipsum non purus</h4>
-				<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+				<h3>Phasellus convallis ipsum non</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-4">
-		<p class="text-center"><img src="http://placehold.it/100x100"></p>
+		<p class="text-center"><%= image_tag "6.png" %></p>
 		<div class="row">
 			<div class="col-md-12">
-				<h4>Phasellus convallis ipsum non purus</h4>
-				<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+				<h3>Phasellus convallis ipsum non</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 			</div>
 		</div>
 	</div>
 </div>
 <div class="row mtb40">
 	<div class="col-md-12">
-		<h3>Examples</h3>
+		<h2 class="text-center">Examples</h2>
 	</div>
 </div>
 <div class="row mb40">
@@ -71,21 +71,21 @@
 		<a class="thumbnail" href="#">
         <img src="http://placehold.it/390x290" alt="Example 1">
       	</a>
-		<h4>Phasellus convallis ipsum non purus</h4>
-		<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+		<h3>Phasellus convallis ipsum non</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 	</div>
 	<div class="col-md-4">
 		<a class="thumbnail" href="#">
         <img src="http://placehold.it/390x290" alt="Example 1">
       	</a>
-		<h4>Phasellus convallis ipsum non purus</h4>
-		<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+		<h3>Phasellus convallis ipsum non</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 	</div>
 	<div class="col-md-4">
 		<a class="thumbnail" href="#">
         <img src="http://placehold.it/390x290" alt="Example 1">
       	</a>
-		<h4>Phasellus convallis ipsum non purus</h4>
-		<p>PLorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
+		<h3>Phasellus convallis ipsum non</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet. Proin ut enim venenatis, interdum urna quis, iaculis nisi.</p>
 	</div>
 </div>
