--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -755,9 +755,9 @@ background-color: #F55923;
 
 }
 
-.dropdown-toggle{
+a.dropdown-toggle{
 	background: none;
-	color: #fff;
+	color: #fff !important;
 }
 
 .dropdown-toggle:hover{
@@ -836,8 +836,14 @@ height: 300px;
   font-size: 16px;
   line-height: 1.5;
 }
-.footer{
+footer {
   background-color: #2c3e50;
   color: #FFFFFF;
   font-weight: normal;
+}
+footer a {
+  color: #FFFFFF !important;
+}
+footer .fa-map-marker {
+  margin-right: 5px;
 }
