imgs footer y dropdown sign up

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -845,5 +845,9 @@ footer a {
   color: #FFFFFF !important;
 }
 footer .fa-map-marker {
-  margin-right: 5px;
+  margin-right: 10px;
+}
+footer img {
+  float: left;
+  margin-right: 15px;
 }
