--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -41,11 +41,11 @@
         </td>
         <td>
           <%= link_to edit_sandbox_path(sandbox) do %>
-            <i class="fa fa-edit" title="Edit"></i>
+            <i class="fa fa-cog" title="Edit Configuration"></i>
           <% end %>
         </td>
         <td>
-          <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure you want to permanently delete this sandbox?' } do %>
             <i class="fa fa-trash" title="Delete"></i>
           <% end %>
         </td>
