--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@ $(document).ready(function(){
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Bienvenido, <%= current_user.email %> <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="/sandboxes"><i class="fa fa-fw fa-inbox"></i> Sandboxes</a>
+                  <a href="/users/edit">My Account</a>
                 </li>
                 <li class="divider"></li>
                 <li>
