--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -851,3 +851,9 @@ footer img {
   float: left;
   margin-right: 15px;
 }
+.pull-right.open .btn-success, .btn-success:hover {
+  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+  box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+  background-color: #449d44 !important;
+  border-color: #398439;
+}
