--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,20 +39,20 @@ $(document).ready(function(){
           </ul>
           <% else %>
           <a class="company-logo" href="/sandboxes">Wizard</a><span class="tagline">beta</span>
-            <ul class="nav pull-right">
-              <li class="dropdown">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="fa fa-user"></i> Sign In <strong class="caret"></strong></a>
-                <div class="dropdown-menu" style="padding: 15px; right: 0; left: initial;">
+            <div class="nav pull-right">
+              <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+              Sign in <span class="caret"></span>
+              </button>
+                <ul class="dropdown-menu" style="padding: 15px; right: 0; left: initial;" role="menu">
                   <form method="post" action="/users/sign_in" accept-charset="UTF-8">
                     <div style="display:none"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="ON2V8XPajVLj0IlToPxGL0jFmBhLA8U6ESrPk+AW0VQ="></div>
-                    <input style="margin-bottom: 15px;" type="email" placeholder="Email" id="user_email" name="user[email]">
+                    <input style="margin-bottom: 15px;" type="email" placeholder="Email" id="user_email" name="user[email]"><br>
                     <input style="margin-bottom: 15px;" type="password" placeholder="Password" id="user_password" name="user[password]">
                     <p><input style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" id="user_remember_me" value="1">Remember me</p>
                     <input class="btn btn-primary btn-block" type="submit" id="sign-in" value="Sign In">
                   </form>
-                </div>
-              </li>
-          </ul>
+                </ul>
+          </div>
       </div>
             </div>
       </div>
@@ -85,7 +85,7 @@ $(document).ready(function(){
         <div class="container mtb40">
           <div class="col-md-8">
             <h3 class="mb20">Developed by</h3>
-            <%= image_tag "UNICEF.png" %><%= image_tag "FCI.png" %>
+            <a href="http://www.unicef.org/" target="_blank" alt="UNICEF Website"><%= image_tag "UNICEF.png" %></a><a href="http://ciudadanointeligente.org/" target="_blank" alt="Fundación Ciudadano Inteligente Website"><%= image_tag "FCI.png" %></a> 
           </div>
           <div class="col-md-4">
             <h3 class="mb20">Contact</h3>
