--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
               <input type="password" class="form-control" id="user_password" placeholder="Password" autocomplete="off" name="user[password]">
             </div>
             <div class="form-group">
-              <label for="user_password_confirmation">Password <span>(8 characters minimum)</span></label>
+              <label for="user_password_confirmation">Password Confirmation</label>
               <input type="password" class="form-control" id="user_password_confirmation" placeholder="Password Confirmation" autocomplete="off" name="user[password_confirmation]">
             </div>
             <button type="submit" class="btn btn-default">Sign Up</button>
