--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -13,6 +13,6 @@
             <button class="btn-redo" onclick="commandManager.redo()" data-tooltip="Redo"><i class="fa fa-repeat fa-lg"></i></button>
             <button class="btn-clear" onclick="graph.clear()" data-tooltip="Clear"><i class="fa fa-trash fa-lg"></i></button>
         <% end %>
-        <a class="btn btn-large btn-success" href="javascript:void(0);" onclick="javascript:introJs().start();">Intro</a>
+        <button class="btn-center" onclick="javascript:introJs().start();" data-tooltip="Help"><i class="fa fa-question-circle fa-lg"></i></button>
     </div>
 </div>
