--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -556,17 +556,20 @@ background-color: #F55923;
 
 .alert {
   display: none;
-  font-size: 10px;
+  font-size: 40px;
   text-transform: uppercase;
-  background: #98E22D;
+  background: #1fa67a;
   color: #fff;
-  width: 100%;
+  /*width: 100%;*/
   position: absolute;
   z-index: 2000;
   text-align: center;
-  opacity: 0.7;
+  opacity: 1;
   border-radius: 0!important;
-  padding: 5px;
+  padding: 50px;
+  top: 200px;
+  width: 300px;
+  margin: 1em 40%;
 }
 
 #sidebar-left  .alertSuccess {
