cambia el ancho al hover

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -313,6 +313,9 @@ span.tagline{
 	position: absolute;
 	border-right: 1px solid #cecece;
 }
+.sidebar-left:hover{
+  width: 150px;
+}
 
 .sidebar {
   position: absolute;
