--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
         <div class="container">
           <% if( user_signed_in? ) %>
           <a class="company-logo" href="/sandboxes">Wizard</a><span class="tagline">beta</span>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Sandboxs</a></li>
+            <li><a href="#">Templates</a></li>
+            <li><a href="#">Tutorials</a></li>
+          </ul>
           <ul class="nav navbar-right top-nav">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Bienvenido, <%= current_user.email %> <b class="caret"></b></a>
