CSS menú Sign out

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -366,6 +366,7 @@ span.tagline{
   background: none;
   border: none;
   padding: 0px 10px;
+  margin-top: 10px;
   height: 32px;
   left: 0;
   top: 0;
@@ -827,6 +828,9 @@ a.dropdown-toggle{
 }
 .mb20 {
   margin-bottom: 20px;
+}
+.pt15 {
+  padding-top: 15px;
 }
 .banner {
 background-color: #3498db;
