--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           </ul>
           <% else %>
           <a class="company-logo" href="/sandboxes">Wizard</a><span class="tagline">beta</span>
-            <div class="nav pull-right">
+            <div class="nav pull-right pt15">
               <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
               Sign in <span class="caret"></span>
               </button>
