corrección palabra Sandboxes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <% if( user_signed_in? ) %>
           <a class="company-logo" href="/sandboxes">Wizard</a><span class="tagline">beta</span>
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Sandboxs</a></li>
+            <li class="active"><a href="#">Sandboxes</a></li>
             <li><a href="#">Templates</a></li>
             <li><a href="#">Tutorials</a></li>
           </ul>
