reemplazo etiqueta e ice de show por edit

--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -35,7 +35,7 @@
         </td>
         <td>
           <%= link_to sandbox do %>
-            <i class="fa fa-eye" title="Show"></i>
+            <i class="fa fa-edit" title="Edit"></i>
           <% end %>
         </td>
         <td>
