Added close button with no style

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -426,6 +426,7 @@ color: #F2F2F2;
 }
 
 #inspector-container {
+  padding-top: 50px;
   background: #fff;
   height: 100%;
   border-left: 1px solid #cecece;
