En edición de sandbox dejar el nombre sin cambio de apariencia al hover

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -888,3 +888,10 @@ background-color: #12181F;
 .person-group ul {
     padding-left: 15px;
 }
+.btnClose {
+  float: right;
+  margin-right: 8px;
+}
+#fileName:hover {
+  color: #FFFFFF;
+}
